--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">GoogleTrainingInteractingWithApp</string>
     <string name="build_an_implicit_intent">Build an Implicit Intent</string>
     <string name="chooser_title">Share with</string>
+    <string name="start_activity_for_result">start activity for result</string>
 </resources>
